# TriforceDataPull

./: Cargo.toml
src/: lib.rs
src/service/: caller.rs  mod.rs
tests/: integration-tests.rs
tests/test_data/: get_event_details_completed_match.json  get_games_completed.json  get_leagues.json  get_live_show_and_match.json  get_live_single_match_bo5.json  get_schedule_1.json  get_schedule_2.json  get_standings_Ended_LCK_Spring_2023.json  get_standings_inProgress_MSI_2023.json  get_teams.json  get_tournaments_for_leagues_LEC.json
