[package]
name = "triforce_data_pull"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

canyon_sql = { git = "https://github.com/gbm25/Canyon-SQL.git", branch = "tests" , features = ["postgres", "migrations"] }
# canyon_sql = { version = "0.4.2", features = ["postgres", "migrations"] }

reqwest = { version = "0.11", features = ["json"] } 
color-eyre = { version = "0.6.2", default-features = false }
itertools = "0.10.5"

chrono = { version = "0.4", features = ["serde"] }
cron = "0.12.0"
tokio = { version = "1.26.0", features = ["full"] }

[dev-dependencies]
pretty_assertions = "1.3.0"
httpmock = "0.6.7"
